# melodiesGenerator

./: README.md  app.py  generated_melody.mid  melodygenerator.py  preprocess.py  pyproject.toml  requirements.txt  temp.mid  test.py  train.py
