[tool.poetry]
name = "melodiesgenerator"
version = "0.1.0"
description = "A Streamlit app for generating melodies from MIDI files."
authors = ["Piyush <piyushaggarwal584@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "*"
pretty_midi = "*"
pydub = "*"
scipy = "*"
tensorflow = "2.10.0"
streamlit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
